# stock-pipeline-lab

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.container/: docker-compose.yml
config/: models.yaml
migrations/: 001_create_stock_data.sql  002_create_sentiment_data.sql  003_create_predictions.sql
scripts/: migrate.py  score_predictions.py
src/pipeline/: config.py  fetch.py  observer.py  pipeline.py  runner.py
src/pipeline/interfaces/: __init__.py  database.py  model.py
src/pipeline/models/: __init__.py  factory.py  linear_reg.py  lstm.py  model.py  random_forest.py
src/pipeline/preprocessing/: __init__.py  preprocessing.py
src/pipeline/provider/: api_provider.py  fetcher.py  postgre.py
src/pipeline/provider/common/: database.py
src/pipeline/utils/: registry.py
src/stock_price_prediction_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api_provider.py  test_postgre.py
