[project]
name = "stock-price-prediction-pipeline"
version = "0.1.0"
description = "Stock price prediction pipeline using Observer & Factory patterns, async data fetching, and PostgreSQL storage."
authors = [
  { name = "Alex Pernea", email = "apernea31@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
  "pandas>=2.0",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "httpx[http2]>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
postgres = [
  "asyncpg>=0.29",
]
lstm = [
  "torch>=2.2",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "black>=24.0",
  "ruff>=0.5",
]

[project.urls]
homepage = "https://example.com"
repository = "https://example.com/repo"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

